--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.14.0
+streamlit>=1.15.0
 tensorflow==2.5.0
 opencv-python==4.5.3.56
 pygame==2.0.1
 numpy==1.21.0
-typing-extensions>=3.10.0.0
